@@ -1000,3 +1000,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20150316 generate.pl.in,libspectrum.h.in: remove autogeneration warning from
          libspectrum.h.in (Stuart).
 20150316 doc/libspectrum.txt: add missing line break (Stuart).
+20150316 snapshot.c: store PC-1 for all snapshot formats whilst in the halted
+         state (Stuart).
